Fallo al realizar la compra --> MostrarPedido/vista direccionPirncipal es null

--- a/AgapeaDAM/Views/Pedido/MostrarPedido.cshtml
+++ b/AgapeaDAM/Views/Pedido/MostrarPedido.cshtml
@@ -363,7 +363,7 @@
     //es cuando muestro el form.de otras direcciones, sino lo oculto <-- el problema de esto es q te deja el hueco del elemento ocultado
     //mejor usar .detach de jquery
 
-    var otradireccioncontainer; //<--- voy a almacenar todo el div con id='otradireccioncontainer'
+    let otradireccioncontainer; //<--- voy a almacenar todo el div con id='otradireccioncontainer'
 
     $('input[name="direccionradios"]').change(
         function (ev) {
