--- a/AgapeaDAM/Views/Shared/_VistaElementoPedido.cshtml
+++ b/AgapeaDAM/Views/Shared/_VistaElementoPedido.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ItemPedido
 <table class="table table-borderless">
     <tr>
-        <td rowspan="2"><img src="@Model.LibroItem.ImagenLibroBase64" style="width:40px;" /></td>
+        <td rowspan="2"><img src="@Model.LibroItem.ImagenLibroBASE64" style="width:40px;" /></td>
         <td><label><small>@Model.LibroItem.Titulo</small></label></td>
         <td>
             <!-- boton eliminar libro X  asp-action="eliminarLibroPedido" -->
